guides/wide-ep-lws/manifests/gateway/kgateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-wide-ep-inference-gateway
  annotations:
spec:
  gatewayClassName: "kgateway"
  infrastructure:
    parametersRef:
      name: infra-wide-ep-inference-gateway
      group: gateway.kgateway.dev
      kind: GatewayParameters
