guides/wide-ep-lws/manifests/gateway/kgateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-wide-ep-llm-d
spec:
  rules:
    - backendRefs:
      timeouts:
        backendRequest: 0s
        request: 0s
